# phiq-io-elastic-kv-cache

./: .gitignore  CHANGELOG.md  CHARACTER_ENCODING_NOTES.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PRE_RELEASE_CHECKLIST.md  PROFESSIONAL_CHECKLIST.md  PROJECT_STATUS.md  README.md  README.md.bak  SECURITY.md  SETUP_SUMMARY.md  build.bat  build.sh  social_media_content.txt
.github/workflows/: build.yml
benchmarks/: sample_baseline_results.json  sample_inference_results.json
docs/: BENCHMARKS.md  OPEN_SOURCE_CORE.md  TECHNICAL.md
examples/: usage_examples.py
notebooks/: ElasticKV_Golden_Ticket_Colab.ipynb  PHIQ_Elastic_KV_Golden_Ticket_Colab_v2.ipynb  README.md  create_autocontained_notebook.py  phiq-io-elastic-kv-cache_notebooks.ipynb  phiq-io-elastic-kv-cache_notebooks_PH.ipynb
results/: README.md
src/: elastic_kv_cli.cu  elastic_kv_core.cu
tests/: analyze_results.py  quick_test.py  run_comprehensive_tests.sh
